fix: ui spacing issues, alignments & fonts exlm-1053

--- a/blocks/featured-cards/featured-cards.css
+++ b/blocks/featured-cards/featured-cards.css
@@ -1,8 +1,16 @@
 @import "../../scripts/browse-card/browse-cards-block.css";
 @import "../../scripts/browse-card/browse-card.css";
 
+.section.featured-cards-container {
+  padding-bottom: 0;
+}
+
 .featured-cards .browse-cards-block-header .browse-card-description-text{
   text-align: center;
+  color: var(--spectrum-gray-800);
+  font-size: 18px;
+  line-height: 23.4px;
+  margin-bottom: 16px;
 }
 
 .featured-cards .browse-cards-block-title {
@@ -30,6 +38,17 @@
   grid-template-columns: 1fr; 
   gap: 32px;
   min-height: 284px;
+  margin-bottom: 24px;
+}
+
+
+.featured-cards .browse-cards-block-title h2 {
+  color: var(--spectrum-gray-800);
+}
+
+.featured-cards .browse-card-dropdown select {
+  font-family: var(--body-font-family);
+  font-size: 14px;
 }
 
 .featured-cards .browse-cards-block-content > div  {
@@ -43,6 +62,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin-bottom: 8px;
 }
   
 .featured-cards .solutions-dropdown , .roles-dropdown {
@@ -58,17 +78,23 @@
   border: 1px solid #E6E6E6;
   border-radius: 4px;
   padding: 10px;
-  color: var(--spectrum-gray-700);
+  color: #464646;
 }
 
 .featured-cards .browse-card-dropdown > p{
-  font-weight: bold;
+  font-weight: 700;
+  color: #363636;
 }
 
 @media only screen and (min-width: 600px) {
+  .section.featured-cards-container {
+    padding-bottom: 4px;
+  }
+
   .featured-cards .browse-card-dropdown {
       flex-direction: row;
       gap: 1em;
+      margin-bottom: 20px;
   }
 
   .featured-cards .browse-card-dropdown > p {
@@ -94,13 +120,22 @@
   .featured-cards .featured-cards .browse-cards-block-content > div {
     flex: 0 0 286px;
   }
+
+  .featured-cards .browse-cards-block-header .browse-card-description-text{
+    margin-bottom: 36px;
+  }
 }
 
 @media only screen and (min-width: 900px) {
+  .section.featured-cards-container {
+    padding-bottom: 10px;
+  }
+
   .featured-cards .browse-cards-block-content {  
     display: flex;
     gap: 32px;
     text-align: center;
+    margin-bottom: 84px;
   }
 
   .featured-cards .browse-cards-block-view {
@@ -112,11 +147,29 @@
     margin-bottom: 7px;
   }
 
+  .featured-cards .browse-card-dropdown {
+    margin-bottom: 0;
+}
+
   .featured-cards .browse-card {
     text-align: left;
   }
 
   .featured-cards .browse-cards-block-content > div {
     flex: 0 0 295px;
+  }
+
+  .featured-cards .browse-card-dropdown > p {
+    color: var(--spectrum-gray-800);
+    font-size: 14px;
+    line-height: 18.2px;
+  }
+
+  .featured-cards .browse-cards-block-header .browse-card-description-text{
+    margin-bottom: 16px;
+  }
+
+  .featured-cards .browse-card-dropdown > select{
+    color: var(--spectrum-gray-800);
   }
 }
