--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -691,6 +691,17 @@ img {
   /* section metadata */
   &.highlight {
     background-color: var(--highlight-background-color);
+
+    &.icon-block-container {
+      padding: 32px 36px 48px;
+
+      & > div > h3 {
+        font-size: 28px;
+        line-height: 42px;
+        text-align: center;
+        margin: 0 0 36px;
+      }
+    }
   }
 
   > div {
@@ -701,6 +712,11 @@ img {
 
   @include breakpoint(tablet) {
     padding: 30px 56px;
+  }
+
+  &.curated-cards-container,
+  &.events-cards-container {
+    padding-bottom: 0;
   }
 }
 
@@ -1009,6 +1025,18 @@ body[class^='browse-'] main {
 }
 
 @include breakpoint('tablet') {
+  .section {
+    &.highlight {
+      &.icon-block-container {
+        padding: 80px 86px;
+
+        & > div > h3 {
+          text-align: left;
+        }
+      }
+    }
+  }
+
   .docs {
     &.docs-solution-landing.docs-tutorial {
       .default-content-wrapper {
